chore: update env faster install coccinelle

--- a/.github/actions/ocaml/action.yml
+++ b/.github/actions/ocaml/action.yml
@@ -13,3 +13,8 @@ runs:
     - name: Update OPAM Repository
       shell: bash
       run: opam update
+    - name: Add Opam ENV to $GITHUB_ENV
+      shell: bash
+      run: |
+        eval $(opam env)
+        env >> $GITHUB_ENV
