--- a/.github/workflows/coccinelle.yml
+++ b/.github/workflows/coccinelle.yml
@@ -20,6 +20,7 @@ jobs:
           yes | opam init --compiler 4.14.1
           yes | opam install coccinelle --yes
           eval $(opam env)
+          env >> $GITHUB_ENV
           # check coccinelle
           spatch --version
       - name: Run Coccinelle on Coccinellery
