--- a/.github/workflows/frama-c.yml
+++ b/.github/workflows/frama-c.yml
@@ -21,3 +21,7 @@ jobs:
           yes | opam install frama-c --yes
           eval $(opam env)
           frama-c --version
+      - name: run frama-c
+        run: |
+          just config-examples
+          frama-c -deadlock -json-compilation-database
