--- a/.github/workflows/frama-c.yml
+++ b/.github/workflows/frama-c.yml
@@ -14,7 +14,7 @@ jobs:
       - uses: actions/checkout@v4
       - uses: ./.github/actions/setup
       - uses: ./.github/actions/ocaml
-      - run: apk add cairo-dev gmp-dev graphviz gtk+3.0-dev gtksourceview-dev zlib-dev
+      - run: apk add cairo-dev gmp-dev graphviz gtk+3.0-dev gtksourceview-dev zlib-dev z3-dev
       - name: install Frama-C
         run: |
           yes | opam init --compiler 4.14.1
@@ -22,4 +22,4 @@ jobs:
           eval $(opam env)
           frama-c --version
           just config-examples
-          frama-c -wp -wp-rte -json-compilation-database examples-build/compile_commands.json
+          frama-c -mthread -wp -wp-rte -json-compilation-database examples-build/compile_commands.json
