--- a/.github/workflows/coccinelle.yml
+++ b/.github/workflows/coccinelle.yml
@@ -23,11 +23,6 @@ jobs:
           env >> $GITHUB_ENV
           # check coccinelle
           spatch --version
-          apk add exa
-          # check
-          exa $PWD
-          exa $PWD/coccinellery/
-          exa $PWD/coccinellery/mutex
-          exa $PWD/coccinellery/mutex/mutex.cocci
-          exaatch --sp-file $PWD/coccinellery/mutex/mutex.cocci --dir tests
-          spatch --sp-file $PWD/coccinellery/mutex2/mutex2.cocci --dir tests
+          spatch --sync --dir tests
+          #spatch --sp-file $PWD/coccinellery/mutex/mutex.cocci --dir tests
+          #spatch --sp-file $PWD/coccinellery/mutex2/mutex2.cocci --dir tests
