--- a/.github/workflows/frama-c.yml
+++ b/.github/workflows/frama-c.yml
@@ -20,6 +20,7 @@ jobs:
           yes | opam init --compiler 4.14.1
           yes | opam install why3 --yes
           yes | opam install z3 --yes
+          eval $(opam env)
           why3 config --detect
           why3 --list-provers
           yes | opam install frama-c --yes
