chore: fix infer build deps

--- a/.github/workflows/infer-racerd.yml
+++ b/.github/workflows/infer-racerd.yml
@@ -16,7 +16,8 @@ jobs:
       - name: setup infer
         run: |
           apk add gcompat gmp-dev sqlite-dev musl-obstack 
-          apk add autoconf automake libtool openjdk8 python3 clang cmake opam
+          apk add -i autoconf automake libtool openjdk8 python3 clang cmake opam
+          apk add -i linux-headers zlib-dev
           just install-infer
       - name: config and run infer with --racerd-only
         run: |
