--- a/.github/workflows/frama-c.yml
+++ b/.github/workflows/frama-c.yml
@@ -19,7 +19,8 @@ jobs:
         run: |
           yes | opam init --compiler 4.14.1
           yes | opam install why3 --yes
-          yes | opam install z3 --yes
+          why3 config detect
+          why3 --list-provers
           eval $(opam env)
           yes | opam install frama-c --yes
           eval $(opam env)
