--- a/.github/workflows/frama-c.yml
+++ b/.github/workflows/frama-c.yml
@@ -21,7 +21,7 @@ jobs:
           yes | opam install why3 --yes
           eval $(opam env)
           why3 config detect
-          why3 --list-provers
+          why3 config list-provers
           yes | opam install frama-c --yes
           eval $(opam env)
           frama-c --version
