--- a/.github/actions/setup/action.yml
+++ b/.github/actions/setup/action.yml
@@ -26,3 +26,7 @@ runs:
     - name: Run zig fmt
       shell: bash
       run: zig fmt --check .
+    - name: Pull DataRace Bench
+      shell: bash
+      run: |
+        git clone https://github.com/LLNL/dataracebench.git
