--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,9 +1,17 @@
 name: CI
-
 on: [push]
-
 jobs:
-  build:
+  zig-build:
     uses: ./.github/workflows/build.yml
-  baseline:
-    uses: ./.github/workflows/baseline.yml
+  infer:
+    uses: ./.github/workflows/infer-racerd.yml
+  clang-static-analyzer:
+    uses: ./.github/workflows/clang-static-analyzer.yml
+  ikos:
+    uses: ./.github/workflows/ikos.yml
+  frama-c:
+    uses: ./.github/workflows/frama-c.yml
+  coccinelle:
+    uses: ./.github/workflows/coccinelle.yml
+  coderrect:
+    uses: ./.github/workflows/coderrect.yml
