--- a/.github/actions/setup/action.yml
+++ b/.github/actions/setup/action.yml
@@ -6,8 +6,8 @@ runs:
     - name: Setup Alpine
       shell: sh
       run: |
-        apk update
-        apk add ninja-build nodejs cmake wget tar samurai xz just make gzip bash git shadow curl sudo file autoconf automake pcre-dev python3-dev
+        sudo apt-get update
+        sudo apt-get install ninja-build nodejs cmake wget tar samurai xz just make gzip bash git shadow curl sudo file autoconf automake pcre-dev python3-dev
     - uses: goto-bus-stop/setup-zig@v2.2.0
     - name: Check Zig ENV
       shell: bash
@@ -15,7 +15,7 @@ runs:
     - name: Install libclang and static binaries
       shell: bash
       run: |
-        apk add clang17-dev clang17-static musl-dev libc++-dev libc++-static openssl-dev clang17-analyzer
+        sudo apt-get install clang17-dev clang17-static musl-dev libc++-dev libc++-static openssl-dev clang17-analyzer
         echo "CC=clang-17" >> $GITHUB_ENV
         echo "CXX=clang++-17" >> $GITHUB_ENV
     - name: Build libgit2, zlib
