--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -4,7 +4,7 @@ project(examples VERSION 0.1 LANGUAGES C CXX)
 set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -Wall -Wextra")
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -Wextra")
 
-set(SRC_DIRS ${CMAKE_CURRENT_LIST_DIR}/shared_var ${CMAKE_CURRENT_LIST_DIR}/thread_pool)
+set(SRC_DIRS ${CMAKE_CURRENT_LIST_DIR}/shared_var ${CMAKE_CURRENT_LIST_DIR}/thread_pool ${CMAKE_CURRENT_LIST_DIR}/correct_sync)
 
 foreach(SRC_DIR ${SRC_DIRS})
   execute_process(
