fixup: correct version

--- a/.github/actions/setup/action.yml
+++ b/.github/actions/setup/action.yml
@@ -12,7 +12,7 @@ runs:
     - uses: extractions/setup-just@v2    
     - uses: KyleMayes/install-llvm-action@v2
       with:
-        versoin: "17.0.6"
+        version: "17.0.6"
     - name: Check Zig ENV
       shell: bash
       run: zig env
