--- a/.github/actions/setup/action.yml
+++ b/.github/actions/setup/action.yml
@@ -7,9 +7,9 @@ runs:
       shell: sh
       run: |
         sudo apt-get update
-        sudo apt-get install wget tar gzip bash git curl file autoconf automake cmake ninja-build zstd-dev
+        sudo apt-get install wget tar gzip bash git curl file autoconf automake cmake ninja-build libzstd-dev
     - uses: goto-bus-stop/setup-zig@v2.2.0
-    - uses: extractions/setup-just@v2    
+    - uses: extractions/setup-just@v2
     - uses: KyleMayes/install-llvm-action@v2
       with:
         version: "17"
@@ -21,7 +21,7 @@ runs:
     - name: Check LLVM, clang, etc
       shell: bash
       run: |
-        ls -al 
+        ls -al
         ls -al ${{ github.workspace }}
         ls -al llvm
         ls -al llvm/lib
