fixup: build LLVM by Zig

--- a/.github/actions/setup/action.yml
+++ b/.github/actions/setup/action.yml
@@ -9,6 +9,8 @@ runs:
         sudo apt-get update
         sudo apt-get install wget tar gzip bash git curl file autoconf automake cmake ninja-build libzstd-dev build-essential libc++-dev libstdc++-11-dev llvm-dev libclang-dev
     - uses: goto-bus-stop/setup-zig@v2.2.0
+      with:
+        version: 0.13.0
     - uses: extractions/setup-just@v2
     #- uses: KyleMayes/install-llvm-action@v2
     #  with:
