--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -18,4 +18,4 @@ jobs:
           just config-examples
           just build-examples
       - name: Run Test
-        run: zig test src/main.zig
+        run: zig build test
