--- a/.github/actions/setup/action.yml
+++ b/.github/actions/setup/action.yml
@@ -23,8 +23,8 @@ runs:
     - name: Build libgit2, zlib
       shell: bash
       run: |
-        echo CC=${{ github.workspace }}/scripts/zigcc >> $GITHUB_ENV
-        echo CXX=${{ github.workspace }}/scripts/zigcxx >> $GITHUB_ENV
+        echo CC="${{ github.workspace }}/scripts/zigcc" >> $GITHUB_ENV
+        echo CXX="${{ github.workspace }}/scripts/zigcxx" >> $GITHUB_ENV
         just install-libgit2 && just build-libgit2
         just install-zlib && just build-zlib
     - name: Run zig fmt
