feat: add baseline benchmark data (#14)
* feat: add baseline benchmark data

* fixup: zig fmt

* fixup: update build.zig fit master zig

* feat: add c++ source that compile C to IR

* fixup: CI

* fixup: CI

* fixup: correct just

* fixup: CI build

* fixup: correct libc

* fixup: install LLVM

* fixup: correct version

* fixup: not reading from local dir

* fixup: CI LLVM deps

* fixup: use installed clang instead of zig

* fixup: specific directory

* fixup: correct path

* fixup: doc \times 2

* fixup: correct setup

* fixup: use action installed path

* fixup: check LLVM lib

* fixup: fix linkage

* fixup: fix link lib

* fixup: more verbose link info

* fixup: use System libc++

* fixup: use dynamic

* fixup: shit..

* fixup: not linking with z

* fixup: dynamic link with zstd

* fixup: install zstd-dev

* fixup: correct deps

* fixup: include-files will needed libclang

* fixup: link with libstdc++

* fixup: install libc++

* fixup: zig use system

* fixup: use dynamic

* fixup

* fixup: use system path

* fixup

* fixup: use stdc++ not c++

* fixup: correct libstdc++ version

* fixup: no c++abi..

* fixup: use system package

* fixup: no such init

* fixup: no more double check

* fixup: specific LLVM path by using build options

* fixup: diff in 14 and 17..

* fixup: no using so high versoin

* fixup: fix diff from 17 to 14

* fixup: build LLVM by Zig

* fixup: correct workflow usage

* fixup: compile to IR by cmd

* fixup: cmake -S

* fixup: use wraped zig

* fixup: also build clang-tools-extra

* fixup: trailing s

* fixup: more specific build options

* fixup: LLVM can not compiled on 16G

* fixup

* fixup: Init tests

* fixup

* fixup

* fixup

* fixup

* fixup: build on ubuntu

--- a/.github/workflows/build-llvm.yml
+++ b/.github/workflows/build-llvm.yml
@@ -1,8 +1,8 @@
-name: Coverity
+name: Build LLVM
 on:
   workflow_call:
 jobs:
-  coverity-baseline:
+  build-LLVM-Clang:
     strategy:
       fail-fast: false
       matrix:
@@ -11,7 +11,5 @@ jobs:
     steps:
       - uses: actions/checkout@v4
       - uses: ./.github/actions/setup
-      - name: setup coverity
-        run: |
-          just install-coverity
-    # TODO
+      - run: just fetch-llvm
+      - run: just build-llvm
