--- a/.github/actions/setup/action.yml
+++ b/.github/actions/setup/action.yml
@@ -3,24 +3,28 @@ description: Install Zig, Alpine, libgit2, zlib, libclang
 runs:
   using: composite
   steps:
-    - name: Setup Alpine
+    - name: Setup Base ENV
       shell: sh
       run: |
-        apk update
-        apk add ninja-build nodejs cmake wget tar samurai xz just make gzip bash git shadow curl sudo file autoconf automake pcre-dev python3-dev
+        sudo apt-get update
+        sudo apt-get install wget tar gzip bash git curl file autoconf automake cmake ninja-build libzstd-dev build-essential libc++-dev libstdc++-11-dev llvm-dev libclang-dev clang-tools
     - uses: goto-bus-stop/setup-zig@v2.2.0
+      with:
+        version: 0.13.0
+    - uses: extractions/setup-just@v2
+    - uses: KyleMayes/install-llvm-action@v2
+      with:
+        version: "17"
+        env: false
+        directory: ${{ github.workspace }}/llvm
     - name: Check Zig ENV
       shell: bash
       run: zig env
-    - name: Install libclang and static binaries
-      shell: bash
-      run: |
-        apk add clang17-dev clang17-static musl-dev libc++-dev libc++-static openssl-dev clang17-analyzer
-        echo "CC=clang-17" >> $GITHUB_ENV
-        echo "CXX=clang++-17" >> $GITHUB_ENV
     - name: Build libgit2, zlib
       shell: bash
       run: |
+        echo CC="${{ github.workspace }}/scripts/zig-cc" >> $GITHUB_ENV
+        echo CXX="${{ github.workspace }}/scripts/zig-cxx" >> $GITHUB_ENV
         just install-libgit2 && just build-libgit2
         just install-zlib && just build-zlib
     - name: Run zig fmt
