--- a/.github/actions/setup/action.yml
+++ b/.github/actions/setup/action.yml
@@ -34,3 +34,8 @@ runs:
       shell: bash
       run: |
         git clone https://github.com/LLNL/dataracebench.git
+    - name: Setup Node and pnpm
+      shell: bash
+      run: |
+        nix profile install nixpkgs#nodejs
+        npm i -g pnpm
