--- a/package.json
+++ b/package.json
@@ -11,6 +11,10 @@
   "license": "ISC",
   "dependencies": {
     "@ast-grep/napi": "^0.23.0",
+    "@google-cloud/vertexai": "^1.2.0",
     "@types/node": "^20.14.2"
+  },
+  "devDependencies": {
+    "vitest": "^1.6.0"
   }
 }
