--- a/.github/actions/fetch-micro-bench/action.yml
+++ b/.github/actions/fetch-micro-bench/action.yml
@@ -15,6 +15,9 @@ runs:
     - name: Check Zig ENV
       shell: bash
       run: zig env
+    - uses: cachix/install-nix-action@v27
+      with:
+        nix_path: nixpkgs=channel:nixos-unstable
     - name: Pull Micro Benchmarks
       shell: bash
       run: |
