--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "license": "ISC",
     "dependencies": {
         "@ast-grep/napi": "^0.23.0",
-        "@google-cloud/vertexai": "^1.2.0"
+        "@google/generative-ai": "^0.13.0",
+        "pino": "^9.2.0"
     },
     "devDependencies": {
         "@types/node": "^20.14.8",
