--- a/.gitignore
+++ b/.gitignore
@@ -20,4 +20,17 @@ pvs-*
 /llvm-*
 /.cache
 /node_modules
-*.js
+/micros
+# Mac stuff:
+.DS_Store
+
+# trunk output folder
+dist
+
+# Rust compile target directories:
+target
+target_ra
+target_wasm
+
+# https://github.com/lycheeverse/lychee
+.lycheecache
