--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,16 +22,41 @@ eframe = { version = "0.28.1", default-features = false, features = [
 ] }
 wgpu = { version = "*", features = ["webgpu", "webgl"] }
 log = "0.4.22"
-polars = { version = "0.41.3" }
+polars = { version = "0.41.3", features = [
+    "serde",
+    "serde-lazy",
+    "lazy",
+    "simd",
+    "avx512",
+    "performant",
+    "temporal",
+    "json",
+    "strings",
+    "regex",
+    "rows",
+    "pivot"
+] }
 rayon = "1.10.0"
-mimalloc = "0.1.43"
-
+regex = "1.10.5"
 # You only need serde if you want app persistence:
 serde = { version = "1.0.203", features = ["derive"] }
+serde_json = { version = "1.0.120" }
+egui_plot = "0.28.1"
+ehttp = "0.5.0"
+dashmap = "6.0.1"
+flume = "0.11.0"
+anyhow = { version = "1.0.86", features = ["backtrace"] }
+egui_extras = { version = "*", features = ["all_loaders"] }
+image = { version = "0.25", features = [
+    "jpeg",
+    "png",
+] } # Add the types you want support for
 
 # native:
 [target.'cfg(not(target_arch = "wasm32"))'.dependencies]
-env_logger = "0.11.3"
+mimalloc = "0.1.43"
+tracing = "0.1"
+tracing-subscriber = "0.2"
 
 # web:
 [target.'cfg(target_arch = "wasm32")'.dependencies]
