--- a/.github/actions/setup/action.yml
+++ b/.github/actions/setup/action.yml
@@ -35,11 +35,16 @@ runs:
       run: |
         git clone https://github.com/LLNL/dataracebench.git
     - uses: cachix/install-nix-action@v27
+      shell: bash
+      with:
+        nix_path: nixpkgs=channel:nixos-unstable
     - uses: actions/setup-node@v4
+      shell: bash
       with:
         corepack-enable: true
-        node-version: 20
+        node-version: 22
     - name: Corepack check
+      shell: bash
       run: |
         corepack enable
         cd ${{ github.workspace }}
