--- a/package.json
+++ b/package.json
@@ -19,5 +19,6 @@
         "@types/node": "^20.14.8",
         "@types/yargs": "^17.0.32",
         "vitest": "^1.6.0"
-    }
+    },
+    "packageManager": "pnpm@9.4.0"
 }
