--- a/.github/actions/setup/action.yml
+++ b/.github/actions/setup/action.yml
@@ -14,8 +14,8 @@ runs:
     - uses: extractions/setup-just@v2
     - uses: KyleMayes/install-llvm-action@v2
       with:
-        version: "17"
-        env: false
+        version: "18.1.8"
+        env: true
         directory: ${{ github.workspace }}/llvm
     - name: Check Zig ENV
       shell: bash
