--- a/.github/workflows/coderrect.yml
+++ b/.github/workflows/coderrect.yml
@@ -11,27 +11,12 @@ jobs:
     steps:
       - uses: actions/checkout@v4
       - uses: extractions/setup-just@v2
+      - name: Coderrect Scan
+        uses: coderrect-inc/coderrect-github-action@main
       - run: sudo apt-get update
       - run: sudo apt-get install build-essential cmake ninja-build clang
       - run: just config-examples
-      - name: install coderrect
-        run: |
-          wget https://coderrect.com/x/coderrect-linux-1.1.3.tar.gz
-          tar zxf coderrect-linux-1.1.3.tar.gz
-          export PATH=$PWD/coderrect-linux-1.1.3/bin:$PATH
-          env >> $GITHUB_ENV
       - name: run coderrect
         run: |
           cd examples-build
-          coderrect -e wrong_atomic_cpp ninja
-          coderrect -e wrong_atomic_2_cpp ninja
-          coderrect -e wrong_atomic_2 ninja
-          coderrect -e wrong_atomic ninja
-          coderrect -e protect_by_lock ninja
-          coderrect -e privileges ninja
-          coderrect -e paramaters ninja
-          coderrect -e infi_recur ninja
-          coderrect -e global ninja
-          coderrect -e dead_lock ninja
-          coderrect -e correct_atomic ninja
-          coderrect -e correct ninja
+          coderrect -t ninja
