--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,5 +13,6 @@ jobs:
     uses: ./.github/workflows/frama-c.yml
   coccinelle:
     uses: ./.github/workflows/coccinelle.yml
-  coderrect:
-    uses: ./.github/workflows/coderrect.yml
+  # coderrect no longer provide binary files
+  # coderrect:
+  #   uses: ./.github/workflows/coderrect.yml
