--- a/.github/actions/setup/action.yml
+++ b/.github/actions/setup/action.yml
@@ -12,16 +12,17 @@ runs:
       with:
         version: 0.13.0
     - uses: extractions/setup-just@v2
-    - uses: KyleMayes/install-llvm-action@v2.0.3
-      with:
-        version: "17.0.6"
-        env: true
-        directory: ${{ github.workspace }}/llvm
-    - name: Check Zig ENV, LLVM Env
+    - name: Install LLVM
+      shell: bash
+      run: |
+        wget https://apt.llvm.org/llvm.sh
+        chmod +x llvm.sh
+        sudo ./llvm.sh 18
+        echo DIFF_LLVM_SHARED_LIB="libLLVM-18" >> $GITHUB_ENV
+    - name: Check Zig ENV
       shell: bash
       run: |
         zig env
-        ls -l ${{ github.workspace }}/llvm
     - name: Build libgit2, zlib
       shell: bash
       run: |
@@ -39,6 +40,11 @@ runs:
     - uses: cachix/install-nix-action@v27
       with:
         nix_path: nixpkgs=channel:nixos-unstable
+    - name: Setup CC, CXX using LLVM-18
+      shell: bash
+      run: |
+        echo CC="/usr/bin/clang-18" >> $GITHUB_ENV
+        echo CXX="/usr/bin/clang-cpp-18" >> $GITHUB_ENV
     - uses: Homebrew/actions/setup-homebrew@master
     - uses: actions/setup-node@v4
       with:
