--- a/.github/actions/setup/action.yml
+++ b/.github/actions/setup/action.yml
@@ -18,8 +18,8 @@ runs:
         wget https://apt.llvm.org/llvm.sh
         chmod +x llvm.sh
         sudo ./llvm.sh 18
-        echo DIFF_LLVM_SHARED_LIB="libLLVM-18" >> $GITHUB_ENV
-        echo DIFF_clang_SHARED_LIB="libclang-18" >> $GITHUB_ENV
+        echo DIFF_LLVM_SHARED_LIB="LLVM-18" >> $GITHUB_ENV
+        echo DIFF_clang_SHARED_LIB="clang-18" >> $GITHUB_ENV
     - name: Check Zig ENV
       shell: bash
       run: |
