--- a/.github/actions/setup/action.yml
+++ b/.github/actions/setup/action.yml
@@ -18,8 +18,10 @@ runs:
         wget https://apt.llvm.org/llvm.sh
         chmod +x llvm.sh
         sudo ./llvm.sh 18
-        echo DIFF_LLVM_SHARED_LIB="LLVM-18" >> $GITHUB_ENV
-        echo DIFF_clang_SHARED_LIB="clang-18" >> $GITHUB_ENV
+        # echo DIFF_LLVM_SHARED_LIB="LLVM-18" >> $GITHUB_ENV
+        # echo DIFF_clang_SHARED_LIB="clang-18" >> $GITHUB_ENV
+        sudo ln -s /usr/lib/llvm-18/lib/libclang-18.so.1 /usr/lib/libclang.so
+        sudo ln -s /usr/lib/llvm-18/lib/libLLVM-18.so /usr/lib/libLLVM.so
     - name: Check Zig ENV
       shell: bash
       run: |
